--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.2.0"
+  },
+  "dependencies": {
+    "@slack/client": "^4.3.1"
   }
 }
