--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.2.0"
+  },
+  "dependencies": {
+    "@slack/client": "^4.3.1",
+    "body-parser": "^1.18.3",
+    "dialogflow": "^0.6.0",
+    "express": "^4.16.3",
+    "file-system": "^2.2.2",
+    "googleapis": "^27.0.0",
+    "mongoose": "^5.2.5"
   }
 }
